Bug 879565 - Add metrofx support for overlay scrollbars. Patch also replaces various static overlay metrics with LookAndFeel values. (Debug osx assertions fixed.) r=mstange
UltraBlame original commit: 77bd60758c538335765b26c3e3a648833c3fefd3

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -130,6 +130,58 @@ scrollbartrack
 vertical
 ;
 }
+media
+all
+and
+(
+-
+moz
+-
+overlay
+-
+scrollbars
+)
+{
+scrollbar
+{
+position
+:
+relative
+;
+z
+-
+index
+:
+2147483647
+;
+}
+scrollbar
+:
+not
+(
+[
+active
+=
+"
+true
+"
+]
+)
+scrollbar
+[
+disabled
+=
+"
+true
+"
+]
+{
+visibility
+:
+hidden
+;
+}
+}
 thumb
 scrollbarbutton
 {
